# typed-graph

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md  base.py  datalog.py  example.py  graph.py  helper.sh  lint.sh  pyproject.toml  rules.py  serialize.py  sherlock.py
docs/: formal-defns.md  horn_clauses.md  problog.md  querying.md
sherlock/: __init__.py  demo.py  entire_graph.py  importer.py  problog_adapter.py  problog_scenario.py  schema.py
tests/: __init__.py  test_base.py  test_datalog.py  test_example.py  test_graph.py  test_serialize.py  test_sherlock_importer.py  test_sherlock_problog_adapter.py  test_sherlock_problog_scenario.py
