[project]
name = "inf-typed-graph"
version = "0.1.0"
description = "Python base package for typed graph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
]

[tool.black]
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = ["."]
